// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Jest presets should return the correct jest config 1`] = `
Object {
  "globals": Object {
    "ts-jest": Object {
      "stringifyContentPathRegex": "\\\\.(html|svg)$",
      "tsconfig": "<rootDir>/tsconfig.spec.json",
    },
  },
  "moduleFileExtensions": Array [
    "ts",
    "html",
    "js",
    "json",
  ],
  "resolver": "jest-preset-angular/build/resolvers/ng-jest-resolver.js",
  "snapshotSerializers": Array [
    "jest-preset-angular/build/serializers/html-comment",
    "jest-preset-angular/build/serializers/ng-snapshot",
    "jest-preset-angular/build/serializers/no-ng-attributes",
  ],
  "testEnvironment": "jsdom",
  "transform": Object {
    "^.+\\\\.(ts|js|mjs|html|svg)$": "jest-preset-angular",
  },
  "transformIgnorePatterns": Array [
    "node_modules/(?!@angular)",
  ],
}
`;

exports[`Jest presets should return the correct jest config 2`] = `
Object {
  "extensionsToTreatAsEsm": Array [
    ".ts",
  ],
  "globals": Object {
    "ts-jest": Object {
      "stringifyContentPathRegex": "\\\\.(html|svg)$",
      "tsconfig": "<rootDir>/tsconfig.spec.json",
      "useESM": true,
    },
  },
  "moduleFileExtensions": Array [
    "ts",
    "html",
    "js",
    "json",
  ],
  "moduleNameMapper": Object {
    "tslib": "tslib/tslib.es6.js",
  },
  "resolver": "jest-preset-angular/build/resolvers/ng-jest-resolver.js",
  "snapshotSerializers": Array [
    "jest-preset-angular/build/serializers/html-comment",
    "jest-preset-angular/build/serializers/ng-snapshot",
    "jest-preset-angular/build/serializers/no-ng-attributes",
  ],
  "testEnvironment": "jsdom",
  "transform": Object {
    "^.+\\\\.(ts|js|html|svg)$": "jest-preset-angular",
  },
  "transformIgnorePatterns": Array [
    "node_modules/(?!tslib)",
  ],
}
`;
